# dromdev

./: .env.example  .gitignore  Dockerfile  README.md  ROVO_DEV_COPY.md  __main__.py  config.py  docker-compose.yml  docker-entrypoint.sh  iistudio.py  install.sh  install_on_server.sh  prompt.txt  promt.txt  pyproject.toml  requirements.txt  setup.py  test_iis_command.sh  ПРОЧИТАЙЭТОТФАЙЛ.txt  данные.txt
.github/workflows/: ci.yml  deploy.yml
.iistudio/: api_tokens.json  arena_accounts.json  users.json
.iistudio/sessions/: 104a3fdf.json  16738471.json  1778f88f.json  19aea877.json  1d66833b.json  1fd2ae6f.json  4ae527c0.json  57efec47.json  5f7c977e.json  66c24803.json  6f47c026.json  75af6e57.json  78c338c7.json  7915d4ba.json  7a443794.json  82eb97a6.json  834f6ed0.json  84705ba1.json  8c8c9dd8.json  8d0622a0.json  902db936.json  9613c5f3.json  b80c6096.json  bf2b4f3c.json  d449dd3e.json  d9163c1f.json  e12672d4.json  ef58139c.json  f068ea91.json
api/: __init__.py  auth.py  server.py
api/routes/: __init__.py  auth_routes.py  chat.py  pricing.py  status.py
arena/: __init__.py  models.py  modes.py  parser.py  receiver.py  selectors.py  sender.py
cache/: __init__.py  cache.py
core/: __init__.py  account_pool.py  agent.py  browser.py  claude_client.py  context.py  kiro_reconnect.py  session.py  tasks.py  tools.py  xvfb_chrome.py
deploy/: deploy.sh  file_watcher.py  iistudio-chrome.service  iistudio-watcher.service  iistudio-xvfb.service  iistudio.service  omniroute.service  restore_omni_key.sh
docker/nginx/: nginx.conf
docker/nginx/conf.d/: iistudio.conf
docker/postgres/: init.sql
iistudio/: __init__.py  __main__.py  main.py
proxy/: __init__.py  checker.py  manager.py  tunnel.py
taskqueue/: __init__.py  task_queue.py  worker.py
tests/: __init__.py  test_models.py  test_parser.py  test_proxy.py
userfiles/: .index.json
userfiles/documents/: env_example.txt  readme.txt
utils/: __init__.py  helpers.py  logger.py
web/static/css/: main.css
web/static/js/: chat.js  main.js
web/templates/: base.html  dashboard.html  index.html  install.html  login.html  models.html  pricing.html  status.html
