[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iistudio"
version = "1.0.0"
description = "IIStudio — AI Dev Tool. arena.ai orchestrator with proxy, cache, CLI and web UI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "IIStudio Team" }
]
keywords = ["ai", "arena", "cli", "orchestrator", "llm", "playwright"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
  "playwright>=1.44.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "aiohttp>=3.9.5",
  "httpx>=0.27.0",
  "redis[asyncio]>=5.0.4",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.3.0",
  "loguru>=0.7.2",
  "rich>=13.7.1",
  "click>=8.1.7",
  "beautifulsoup4>=4.12.3",
  "tenacity>=8.3.0",
  "aiofiles>=23.2.1",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "flake8>=7.0",
  "black>=24.0",
  "mypy>=1.8",
  "httpx>=0.27.0",
]

[project.scripts]
iis       = "iistudio:cli"
iistudio  = "iistudio:cli"

[project.urls]
Homepage   = "https://github.com/iistudio/iistudio"
Repository = "https://github.com/iistudio/iistudio"

[tool.setuptools.packages.find]
where = ["."]
include = ["iistudio*", "arena*", "api*", "cache*", "core*", "proxy*", "queue*", "utils*", "web*"]

[tool.setuptools.package-data]
"web" = ["templates/**/*", "static/**/*"]
"*"   = ["*.txt", "*.md", "*.env.example"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
python_files = ["test_*.py"]
addopts      = "-v --tb=short"

[tool.black]
line-length    = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version         = "3.11"
ignore_missing_imports = true
warn_return_any        = false
